--- a/index.html
+++ b/index.html
@@ -9,16 +9,23 @@
     <div id="app">
         <h1>Agenda de Contatos</h1>
 
+        <input type="text" v-model="searchText" placeholder="Entre com um nome">
+
         <button v-on:click="getData">Carregar dados</button>
 
+        <div v-if="listResult.length <= 0">
+            <p>Nenhum contato encontrado!</p>
+        </div>
+
         <ul>
-            <li v-for="item in contactList">
+            <li v-for="item, index in listResult">
                 <address>
                     <img v-bind:src="item.picture" v-bind:alt="firstName"><br>
                     {{item.firstName}} {{item.lastName}}<br>
                     E-mail: {{item.email}}<br>
                     Cidade: {{item.city}}
                 </address>
+                <button v-on:click="removeContact(index)">Excluir</button>
             </li>
         </ul>
     </div>
