--- a/index.html
+++ b/index.html
@@ -3,29 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Agenda de Contato</title>
 </head>
 <body>
     <div id="app">
         <h1>Agenda de Contatos</h1>
 
-        <input type="text" v-model="searchText" placeholder="Entre com um nome">
+        <input class="input" type="text" v-model="searchText" placeholder="Entre com um nome">
 
-        <button v-on:click="getData">Carregar dados</button>
+        <!--
+            <button class="button" v-on:click="getData">Carregar dados</button>
+        -->
 
-        <div v-if="listResult.length <= 0">
+        <div class="msg" v-if="listResult.length <= 0">
             <p>Nenhum contato encontrado!</p>
         </div>
 
         <ul>
             <li v-for="item, index in listResult">
-                <address>
-                    <img v-bind:src="item.picture" v-bind:alt="firstName"><br>
-                    {{item.firstName}} {{item.lastName}}<br>
-                    E-mail: {{item.email}}<br>
-                    Cidade: {{item.city}}
-                </address>
-                <button v-on:click="removeContact(index)">Excluir</button>
+                <div class="card">
+                    <address>
+                        <img class="card-image" v-bind:src="item.picture" v-bind:alt="firstName"><br>
+                        <strong>{{item.firstName}} {{item.lastName}}</strong><br>
+                        E-mail: {{item.email}}<br>
+                        Cidade: {{item.city}}
+                    </address>
+                    <button class="button-delete" v-on:click="removeContact(index)">Excluir</button>
+                </div>
             </li>
         </ul>
     </div>
